docs/style.css
:root {
    --textp: #d8dee9;
    --textb: #eceff4;
    --texta: #88c0d0;
    --texts: #ebcb8b;
    --textl: #b8bec9;
    --borderl: #4c566a;
    --bglight: #3b4252;
    --bgbase: #2e3440;
    --bgdark: #20242d;
    --bgdarker: #121212;
    --bgac: #d8dee9;
    --bga: #81a1c1;
    --borderbga: #20242D;
    --textbga: #2e3440;
    --shadewin: #20242D;
    --shadebase: #101114;
}

#top-bar {
    margin: -8px -8px 8px -8px;
    height: 24px;
    background-color: var(--shadebase);
    border-bottom: 1px solid var(--borderl);
    display: flex;
    justify-content: center;
}

#top-banner {
    height: 160px;
    margin: -8px -8px -152px -8px;
    background-image: linear-gradient(rgba(32,36,45,0.5), 10%, rgba(43,50,65,1.0),15%, rgba(32,36,45,0.1));
}

#left-margin-button {
    text-wrap: nowrap;
    padding-right: 10px;
    position: absolute;
    right: 100%;
}
#top-bar h3 {
    color: var(--textl);
}
.top-bar-separator {
    display: inline-block;
    width: 1px;
    height: 100%;
    background-color: var(--borderl);
}
.top-bar-button-group {
    display: flex;
    height: 100%;
    gap: 6px;
    align-items: center;
}
#top-bar-buttons {
    position: relative;
    display: flex;
    height: 100%;
    flex: auto;
    color: var(--textl);
    max-width: 432px;
    justify-content: space-between;
}
@media screen and (max-width: 540px) {
    #top-bar-buttons {
        padding-left: 8px;
        padding-right: 8px;
    }
    #left-margin-button {
        position: static;
    }
}


body {
    font-family: monospace;
    text-align: center;
    color: var(--textp);
    background-color: var(--bgdark);
    background-image: url("graphics/bg.png");
}

* {
    font-size: 12px;
}

hr {
    color: var(--borderl);
}

h1, h2 {
    text-align: left;
    border-bottom: 1px solid var(--borderl);
    margin: 0;
    padding-bottom: 3px;
    font-style: bold;
    text-transform: uppercase;
    text-wrap: nowrap;
}
/*
h1::before, h2::before { content: "-- "; }
h1::after, h2::after { content: " --"; }
*/

h1 {
    color: var(--texta);
    border-color: var(--borderl);
}

h1.inline, h2.inline {
    border-bottom: 0;
    padding-bottom: 0;
}

h3 {
    color: var(--textp);
    font-style: bold;
}

a {
    text-decoration: none;
    color: var(--texta);
}

a:hover { text-decoration-line: underline; }

.horizontal {
    display: flex;
    flex-direction: row;
}

.vertical {
    display: flex;
    flex-direction: column;
}

.centered {
    display: flex;
    justify-content: center;
}

.align-start {
    display: flex;
    align-items: start;
}

.wrapping {
    display: flex;
    flex-wrap: wrap;
}

.window {
    margin: 4px 4px;
    padding: 0px 5px 3px;
    position: relative;
    text-align: left;
    background-color: var(--bgbase);
    border: 1px solid var(--borderl);
    box-shadow: 5px 5px var(--shadebase);
}

.green-button, .blue-button {
    width: 120px;
    background-color: var(--bglight);
    transition: transform 0.1s linear;
}

.green-button {
    padding: 12px 12px;
    border: 1px solid #d1f2af;
    color: #d1f2af;
}

.blue-button {
    padding: 6px 12px;
    border: 1px solid #a1c9f1;
    color: #a1c9f1;
}

.button-shadow {
    margin: 8px 0px 0px 8px;
    display: inline-block;
    flex: 0 0 auto;
    position: relative;
    background-color: var(--shadebase);
    /*box-shadow: 5px 5px var(--shadebase);*/
}

.button-shadow > * {
    margin: -4px 4px 4px -4px;
}

.button-shadow:hover {
    text-decoration: none;
}

.button-shadow:hover .squarish-button {
    transform: translate(-4px, -4px);
    animation: rock 1s -0.5s alternate linear infinite;
}

.button-shadow:hover .bouncer {
    animation: bob 0.5s -0.5s alternate ease-out infinite;
}

.button-shadow:hover > .green-button {
    transform: translate(-4px, -4px);
    text-shadow: 1px 1px 0px var(--shadewin);
    background-image: linear-gradient(0deg,rgba(26, 27, 33, 0.62) 0%, rgba(59, 66, 82, 0) 21%, rgba(205, 237, 172, 0.11) 57%, rgba(209, 242, 175, 0.27) 95%, rgba(245, 255, 235, 0.77) 100%);
}
.button-shadow:hover > .blue-button {
    transform: translate(-4px, -4px);
    text-shadow: 1px 1px 0px var(--shadewin);
    background-image: linear-gradient(0deg,rgba(26, 27, 33, 0.62) 0%, rgba(59, 66, 82, 0) 21%, rgba(172, 210, 237, 0.11) 57%, rgba(175, 223, 242, 0.27) 95%, rgba(235, 253, 255, 0.77) 100%);
}
button.green-button:hover {
    text-shadow: 1px 1px 0px var(--shadewin);
    background-image: linear-gradient(0deg,rgba(26, 27, 33, 0.62) 0%, rgba(59, 66, 82, 0) 21%, rgba(205, 237, 172, 0.11) 57%, rgba(209, 242, 175, 0.27) 95%, rgba(245, 255, 235, 0.77) 100%);
}
button.blue-button:hover {
    text-shadow: 1px 1px 0px var(--shadewin);
    background-image: linear-gradient(0deg,rgba(26, 27, 33, 0.62) 0%, rgba(59, 66, 82, 0) 21%, rgba(172, 210, 237, 0.11) 57%, rgba(175, 223, 242, 0.27) 95%, rgba(235, 253, 255, 0.77) 100%);
}

.hnav {
    overflow: scroll;
    text-wrap: nowrap;
}

.hnav > * {
    display: inline-block;
    padding: 0 6px;
}

.hnav > :not(:last-child) {
    border-right: 1px solid var(--borderl);
}

.card, .card:hover {
    color: var(--textp);
    text-decoration: none;
}

.card h3 {
    margin: 4px 0 2px;
}

.card:hover h1 {
    text-decoration: underline;
}

.image-count-label {
    position: absolute;
    padding: 0 8px;
    background-color: var(--bgdark);
}

#picture-frame {
    background-color: var(--bga);
    border: 1px solid var(--borderbga);
    box-shadow: 3px 3px var(--shadewin);
    margin: 12px 8px;
    padding: 6px;
    display: inline-block;
    rotate: 4deg;
}

#picture-frame > img {
    background-color: var(--bgac);
    border: 1px solid var(--borderbga);
    margin-bottom: -3px;
}

#gallery-wrapper {
    display: flex;
    flex-direction: row;
    align-items: start;
}

@media screen and (max-width: 640px) {
    #gallery-wrapper {
        flex-direction: column-reverse;
        align-items: stretch;
    }
}

